--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,38 +1,26 @@
 #============================#
-#===== Database sttings =====#
+#===== Database settings =====#
 #============================#
 
-#oracle database settings
-#jdbc.type=oracle
-#jdbc.driver=oracle.jdbc.driver.OracleDriver
-#jdbc.url=jdbc:oracle:thin:@127.0.0.1:1521:orcl
-#jdbc.username=jeesite
-#jdbc.password=123456
 
 #mysql database setting
 jdbc.type=mysql
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/jxq_frame?useUnicode=true&characterEncoding=utf-8
+jdbc.url=jdbc:mysql://localhost:3306/share_frame_mini?useUnicode=true&characterEncoding=utf-8
 jdbc.username=root
 jdbc.password=root
 
-#mssql database settings
-#jdbc.type=mssql
-#jdbc.driver=net.sourceforge.jtds.jdbc.Driver
-#jdbc.url=jdbc:jtds:sqlserver://localhost:1433/jeesite
-#jdbc.username=sa
-#jdbc.password=sa
 
 #pool settings
 jdbc.pool.init=1
 jdbc.pool.minIdle=3
 jdbc.pool.maxActive=20
 
-#jdbc.testSql=SELECT 'x'
+#jdbc.testSql
 jdbc.testSql=SELECT 'x' FROM DUAL
 
 #redis settings
-redis.keyPrefix=jeesite
+redis.keyPrefix=share
 redis.host=127.0.0.1
 redis.port=6379
 
@@ -116,9 +104,3 @@ activiti.diagram.labelFontName=\u5b8b\u4f53
 activiti.diagram.annotationFontName=\u5b8b\u4f53
 #activiti\u5916\u90e8\u8868\u5355\u6839\u5730\u5740\u914d\u7f6e
 activiti.form.server.url=
-
-#\u4e0a\u4f20\u6587\u4ef6\u7edd\u5bf9\u8def\u5f84, \u8def\u5f84\u4e2d\u4e0d\u5141\u8bb8\u5305\u542b\u201cuserfiles\u201d
-#userfiles.basedir=D:/jeesite
-
-#\u5de5\u7a0b\u8def\u5f84\uff0c\u5728\u4ee3\u7801\u751f\u6210\u65f6\u83b7\u53d6\u4e0d\u5230\u5de5\u7a0b\u8def\u5f84\u65f6\uff0c\u53ef\u518d\u6b64\u6307\u5b9a\u7edd\u5bf9\u8def\u5f84\u3002
-#projectPath=D\:\\workspace\\jeesite
