删除活动相关配置

--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -8,7 +8,7 @@ jdbc.type=mysql
 jdbc.driver=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/share_frame_mini?useUnicode=true&characterEncoding=utf-8
 jdbc.username=root
-jdbc.password=root
+jdbc.password=cueb
 
 
 #pool settings
@@ -93,14 +93,3 @@ web.staticFile=.css,.js,.png,.jpg,.gif,.jpeg,.bmp,.ico,.swf,.psd,.htc,.htm,.html
 #\u5355\u70b9\u767b\u5f55CAS\u8bbe\u7f6e
 cas.server.url=http://127.0.0.1:8180/cas
 cas.project.url=http://127.0.0.1:8080/jeesite
-
-#\u5de5\u4f5c\u6d41\u8bbe\u7f6e
-activiti.isSynActivitiIndetity=false
-activiti.export.diagram.path=c:/activiti_diagram
-#activiti font (windows font: \u5b8b\u4f53  linux font: simsun)
-activiti.diagram.activityFontName=\u5b8b\u4f53
-activiti.diagram.labelFontName=\u5b8b\u4f53
-#5.21.0 \u65b0\u589e\u53c2\u6570 ,2016.06.23 \u8f66\u6811\u708e add
-activiti.diagram.annotationFontName=\u5b8b\u4f53
-#activiti\u5916\u90e8\u8868\u5355\u6839\u5730\u5740\u914d\u7f6e
-activiti.form.server.url=
