--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -29,8 +29,8 @@ redis.port=6379
 #============================#
 
 #\u4ea7\u54c1\u4fe1\u606f\u8bbe\u7f6e
-productName=share \u5feb\u901f\u5f00\u53d1\u5e73\u53f0
-copyrightYear=2017
+productName= \u4e03\u7ef4\u7a7a\u95f4\u000d\u000a
+copyrightYear=2018
 version=V1.0.0
 
 #\u6f14\u793a\u6a21\u5f0f: \u4e0d\u80fd\u64cd\u4f5c\u548c\u4fdd\u5b58\u7684\u6a21\u5757\uff1a sys: area/office/user/role/menu/dict, cms: site/category
@@ -89,7 +89,3 @@ web.maxUploadSize=10485760
 
 #\u9759\u6001\u6587\u4ef6\u540e\u7f00
 web.staticFile=.css,.js,.png,.jpg,.gif,.jpeg,.bmp,.ico,.swf,.psd,.htc,.htm,.html,.crx,.xpi,.exe,.ipa,.apk
-
-#\u5355\u70b9\u767b\u5f55CAS\u8bbe\u7f6e
-cas.server.url=http://127.0.0.1:8180/cas
-cas.project.url=http://127.0.0.1:8080/jeesite
