数据库优化

--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -29,7 +29,7 @@ redis.port=6379
 #============================#
 
 #\u4ea7\u54c1\u4fe1\u606f\u8bbe\u7f6e
-productName= \u4e03\u7ef4\u7a7a\u95f4\u000d\u000a
+productName= \u81ea\u52a9\u914d\u7f6e\u5e73\u53f0
 copyrightYear=2018
 version=V1.0.0
 
