--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -28,9 +28,10 @@ redis.port=6379
 #===== System settings ======#
 #============================#
 
-#\u4ea7\u54c1\u4fe1\u606f\u8bbe\u7f6e
+
 productName= \u81ea\u52a9\u914d\u7f6e\u5e73\u53f0
-copyrightYear=2018
+copyrightCompany = Sina IS
+copyrightYear=2018-2028
 version=V1.0.0
 
 #\u6f14\u793a\u6a21\u5f0f: \u4e0d\u80fd\u64cd\u4f5c\u548c\u4fdd\u5b58\u7684\u6a21\u5757\uff1a sys: area/office/user/role/menu/dict, cms: site/category
